<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral95"
    tools:context=".MainActivity">

    <!-- ************************* UPDATE ************************* -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_mainActivity_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- ************************* IMG-UPDATE ************************* -->
        <ImageView
            android:id="@+id/image_mainActivity_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/background_round"
            android:padding="8dp"
            android:src="@drawable/ic_update"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ************************* TXT-UPDATE ************************* -->
        <TextView
            android:id="@+id/text_mainActivity_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:padding="8dp"
            android:text="@string/actualizacion_disponible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_mainActivity_update"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ************************* BTN-DOWNLOAD ************************* -->
        <Button
            android:id="@+id/button_mainActivity_download"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:text="@string/descargar"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/sky_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ************************* DATE ************************* -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_mainActivity_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_mainActivity_update">

        <!-- ************************* TXT-DAY ************************* -->
        <TextView
            android:id="@+id/text_mainActivity_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginStart="16dp"
            android:text="@string/dia"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ************************* TXT-DATE ************************* -->

        <!-- ************************* BTN-FINISHDAY ************************* -->
        <TextView
            android:id="@+id/text_mainActivity_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/fecha"
            android:textAlignment="viewStart"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mainActivity_day"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button_mainActivity_finishDay"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/terminar_jornada"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/purple"
            android:textSize="18sp"
            app:iconTint="@color/purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:strokeColor="@color/material_dynamic_neutral60" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- ************************* PLACE ************************* -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_mainActivity_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_mainActivity_date">

        <!-- ************************* TXT-PLACENAME ************************* -->
        <TextView
            android:id="@+id/text_mainActivity_placeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:text="@string/nombre_restaurante"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/primary_text"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ************************* TXT-PLACEADDRESS ************************* -->
        <TextView
            android:id="@+id/text_mainActivity_placeAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:text="@string/direccion_restaurante"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mainActivity_placeName" />

        <!-- ************************* TXT-PLACESCHEDULE ************************* -->
        <TextView
            android:id="@+id/text_mainActivity_placeSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="4dp"
            android:text="@string/horario_restaurante"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mainActivity_placeAddress" />

        <!-- ************************* BTN-DIRECTIONS ************************* -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_mainActivity_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/cardview_shadow_end_color"
            android:minWidth="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            app:icon="@drawable/ic_directions"
            app:iconGravity="textEnd"
            app:iconPadding="0dp"
            app:iconSize="48dp"
            app:iconTint="@color/purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- ************************* BUTTONSPLACE ************************* -->
        <LinearLayout
            android:id="@+id/layout_mainActivity_buttonsPlace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_mainActivity_placeSchedule">

            <!-- ************************* BTN-START ************************* -->
            <Button
                android:id="@+id/button_mainActivity_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:backgroundTint="@color/orange"
                android:text="@string/iniciar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <!-- ************************* BTN-DETAILS ************************* -->
            <Button
                android:id="@+id/button_mainActivity_details"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                android:layout_weight="1"
                android:text="@string/detalles"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/orange"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>